@@ -1,3 +1,4 @@
+* Manage icons in input
 * Support RTL language direction
 * Apply factor on domain parser
 * Use tab name in CSV Export/Import
